force-app/main/default/objects/Inventario_de_Usados__c/Inventario_de_Usados__c.object-meta.xml
<CustomObject>
    <description>Objeto encargado de la generación de productos usados en inventario.</description>
    <label>Creación Inventario de Usados</label>
    <nameField>
        <displayFormat>IU-{000000000}</displayFormat>
        <label># Salesforce Inventario de Usados</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creación Inventarios de Usados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>