force-app/main/default/objects/Inventario_de_Usados__c/fields/Agencia__c.field-meta.xml
<CustomField>
    <fullName>Agencia__c</fullName>
    <label>Agencia de recepción</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUTOCEIBA</fullName>
            </value>
            <value>
                <fullName>AUTOCIPRÉS</fullName>
            </value>
            <value>
                <fullName>AUTOCORAL</fullName>
            </value>
            <value>
                <fullName>AUTOGUAYACÁN</fullName>
            </value>
            <value>
                <fullName>AUTOLAUREL</fullName>
            </value>
            <value>
                <fullName>AUTOPALMA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>