force-app/main/default/objects/Inventario_de_Usados__c/fields/Agencia_de_ubicacion__c.field-meta.xml
<CustomField>
    <fullName>Agencia_de_ubicacion__c</fullName>
    <label>Agencia de ubicación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUTOCEIBA</fullName>
            </value>
            <value>
                <fullName>AUTOCIPRÉS</fullName>
            </value>
            <value>
                <fullName>AUTOCORAL</fullName>
            </value>
            <value>
                <fullName>AUTOGUAYACÁN</fullName>
            </value>
            <value>
                <fullName>AUTOLAUREL</fullName>
            </value>
            <value>
                <fullName>AUTOPALMA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>