force-app/main/default/objects/Inventario_de_Usados__c/fields/Asesor_Que_Gestiona_El_Ingreso_Del_Vh_Us__c.field-meta.xml
<CustomField>
    <fullName>Asesor_Que_Gestiona_El_Ingreso_Del_Vh_Us__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asesor Que Gestiona El Ingreso Del Vh Us</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inventarios_de_Usados</relationshipName>
    <type>Lookup</type>
</CustomField>