force-app/main/default/objects/Inventario_de_Usados__c/fields/Asesor_Venta_Del_Vh_Usado__c.field-meta.xml
<CustomField>
    <fullName>Asesor_Venta_Del_Vh_Usado__c</fullName>
    <formula>IF (TEXT(Oportunidad__r.StageName)=&quot;P5&quot;,  Oportunidad__r.Owner.FirstName &amp;&quot; &quot;&amp;  Oportunidad__r.Owner.LastName, &quot;No Asignado&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asesor Venta Del Vh Usado</label>
    <type>Text</type>
</CustomField>