force-app/main/default/objects/Inventario_de_Usados__c/fields/Buscar_Vehiculo__c.field-meta.xml
<CustomField>
    <fullName>Buscar_Vehiculo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buscar Vehiculo Honda</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Inventarios_de_Usados</relationshipName>
    <type>Lookup</type>
</CustomField>