force-app/main/default/objects/Inventario_de_Usados__c/fields/Caja__c.field-meta.xml
<CustomField>
    <fullName>Caja__c</fullName>
    <label>Caja</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>