force-app/main/default/objects/Inventario_de_Usados__c/fields/Cc_Nit_Cliente_Comprador__c.field-meta.xml
<CustomField>
    <fullName>Cc_Nit_Cliente_Comprador__c</fullName>
    <formula>IF (TEXT(Oportunidad__r.StageName)=&quot;P5&quot;,  Oportunidad__r.Account.AM_Numero_de_documento__c , &quot;No Asignado&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cc/Nit Cliente Comprador</label>
    <type>Text</type>
</CustomField>