force-app/main/default/objects/Inventario_de_Usados__c/fields/Cedula_Del_Asesor_De_Venta__c.field-meta.xml
<CustomField>
    <fullName>Cedula_Del_Asesor_De_Venta__c</fullName>
    <formula>Oportunidad__r.Owner.Numero_de_documento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cédula Del Asesor De Venta</label>
    <type>Text</type>
</CustomField>