force-app/main/default/objects/Inventario_de_Usados__c/fields/Cilindraje__c.field-meta.xml
<CustomField>
    <fullName>Cilindraje__c</fullName>
    <inlineHelpText>La medida es en litros.</inlineHelpText>
    <label>Cilindraje(lts)</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>