force-app/main/default/objects/Inventario_de_Usados__c/fields/Ciudad_Placa__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Placa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ciudad Placa</label>
    <referenceTo>AM_Municipio__c</referenceTo>
    <relationshipName>Inventarios_de_Usados</relationshipName>
    <type>Lookup</type>
</CustomField>