force-app/main/default/objects/Inventario_de_Usados__c/fields/Costo_Reacondicionamiento__c.field-meta.xml
<CustomField>
    <fullName>Costo_Reacondicionamiento__c</fullName>
    <label>Costo Reacondicionamiento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>