force-app/main/default/objects/Inventario_de_Usados__c/fields/Costo_Total__c.field-meta.xml
<CustomField>
    <fullName>Costo_Total__c</fullName>
    <formula>Costo__c + Costo_Reacondicionamiento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costo Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>