force-app/main/default/objects/Inventario_de_Usados__c/fields/Dias_de_inventario__c.field-meta.xml
<CustomField>
    <fullName>Dias_de_inventario__c</fullName>
    <formula>CreatedDate - NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días de inventario</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>