force-app/main/default/objects/Inventario_de_Usados__c/fields/Estado_Del_Vehiculo__c.field-meta.xml
<CustomField>
    <fullName>Estado_Del_Vehiculo__c</fullName>
    <label>Estado Del Vehículo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DISPONIBLE</fullName>
                <default>true</default>
                <label>DISPONIBLE</label>
            </value>
            <value>
                <fullName>FACTURADO</fullName>
            </value>
            <value>
                <fullName>INHABILITADO</fullName>
            </value>
            <value>
                <fullName>PENDIENTE POR INGRESAR</fullName>
            </value>
            <value>
                <fullName>SEPARADO</fullName>
            </value>
            <value>
                <fullName>REACONDICIONAMIENTO</fullName>
            </value>
            <value>
                <fullName>CONSIG. RETIRADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>