force-app/main/default/objects/Inventario_de_Usados__c/fields/Fecha_De_Factura__c.field-meta.xml
<CustomField>
    <fullName>Fecha_De_Factura__c</fullName>
    <label>Fecha De Factura</label>
    <type>Date</type>
</CustomField>