force-app/main/default/objects/Inventario_de_Usados__c/fields/Fotos_AutosHondaCom__c.field-meta.xml
<CustomField>
    <fullName>Fotos_AutosHondaCom__c</fullName>
    <label>Fotos Autos.Honda.Com</label>
    <type>Url</type>
</CustomField>