force-app/main/default/objects/Inventario_de_Usados__c/fields/Fotos_En_Olx__c.field-meta.xml
<CustomField>
    <fullName>Fotos_En_Olx__c</fullName>
    <label>Fotos  En Olx</label>
    <type>Url</type>
</CustomField>