force-app/main/default/objects/Inventario_de_Usados__c/fields/Fotos_FINECAR__c.field-meta.xml
<CustomField>
    <fullName>Fotos_FINECAR__c</fullName>
    <label>Fotos FINECAR</label>
    <type>Url</type>
</CustomField>