force-app/main/default/objects/Inventario_de_Usados__c/fields/Fotos_TucarroCom__c.field-meta.xml
<CustomField>
    <fullName>Fotos_TucarroCom__c</fullName>
    <label>Fotos  Tucarro.Com</label>
    <type>Url</type>
</CustomField>