force-app/main/default/objects/Inventario_de_Usados__c/fields/Kilometraje__c.field-meta.xml
<CustomField>
    <fullName>Kilometraje__c</fullName>
    <label>Kilometraje</label>
    <length>25</length>
    <type>Text</type>
</CustomField>