force-app/main/default/objects/Inventario_de_Usados__c/fields/Linea__c.field-meta.xml
<CustomField>
    <fullName>Linea__c</fullName>
    <label>Línea Honda</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Marca__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ODYSSEY</fullName>
            </value>
            <value>
                <fullName>RIDGELINE</fullName>
            </value>
            <value>
                <fullName>PILOT</fullName>
            </value>
            <value>
                <fullName>CROSSTOUR</fullName>
            </value>
            <value>
                <fullName>CR-V</fullName>
            </value>
            <value>
                <fullName>HR-V</fullName>
            </value>
            <value>
                <fullName>FIT</fullName>
            </value>
            <value>
                <fullName>WR-V</fullName>
            </value>
            <value>
                <fullName>CIVIC</fullName>
            </value>
            <value>
                <fullName>ACCORD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>