force-app/main/default/objects/Inventario_de_Usados__c/fields/Linea_otras_marcas__c.field-meta.xml
<CustomField>
    <fullName>Linea_otras_marcas__c</fullName>
    <label>Línea otras marcas</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Marca__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>10.160 OD</fullName>
            </value>
            <value>
                <fullName>10.160 OD PLUS</fullName>
            </value>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>1500</fullName>
            </value>
            <value>
                <fullName>2008</fullName>
            </value>
            <value>
                <fullName>208</fullName>
            </value>
            <value>
                <fullName>230 SL</fullName>
            </value>
            <value>
                <fullName>280 SE/1 4.5</fullName>
            </value>
            <value>
                <fullName>280 SL</fullName>
            </value>
            <value>
                <fullName>2 HATCHBACK</fullName>
            </value>
            <value>
                <fullName>2 SEDAN</fullName>
            </value>
            <value>
                <fullName>3008</fullName>
            </value>
            <value>
                <fullName>301</fullName>
            </value>
            <value>
                <fullName>308</fullName>
            </value>
            <value>
                <fullName>356 C</fullName>
            </value>
            <value>
                <fullName>3 HATCHBACK</fullName>
            </value>
            <value>
                <fullName>3 SEDAN</fullName>
            </value>
            <value>
                <fullName>4 RUNNER</fullName>
            </value>
            <value>
                <fullName>4 RUNNER 4WD</fullName>
            </value>
            <value>
                <fullName>4 RUNNER LIMITED</fullName>
            </value>
            <value>
                <fullName>4RUNNER LIMITED 4X4 V6</fullName>
            </value>
            <value>
                <fullName>4 RUNNER SR5</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>5008</fullName>
            </value>
            <value>
                <fullName>500 SEC</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>700 EXPRESS</fullName>
            </value>
            <value>
                <fullName>718 BOXSTER</fullName>
            </value>
            <value>
                <fullName>718 BOXSTER GTS</fullName>
            </value>
            <value>
                <fullName>718 BOXSTER GTS 4.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>