force-app/main/default/objects/Inventario_de_Usados__c/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <label>Marca</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HONDA</fullName>
            </value>
            <value>
                <fullName>AUDI</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>CHEVROLET</fullName>
            </value>
            <value>
                <fullName>CHRYSLER</fullName>
            </value>
            <value>
                <fullName>CITROEN</fullName>
            </value>
            <value>
                <fullName>DAIHATSU</fullName>
            </value>
            <value>
                <fullName>DODGE</fullName>
            </value>
            <value>
                <fullName>FIAT</fullName>
            </value>
            <value>
                <fullName>FORD</fullName>
            </value>
            <value>
                <fullName>HYUNDAI</fullName>
            </value>
            <value>
                <fullName>KIA</fullName>
            </value>
            <value>
                <fullName>LAND ROVER</fullName>
            </value>
            <value>
                <fullName>MAZDA</fullName>
            </value>
            <value>
                <fullName>MERCEDES BENZ</fullName>
            </value>
            <value>
                <fullName>MINI</fullName>
            </value>
            <value>
                <fullName>MITSUBISHI</fullName>
            </value>
            <value>
                <fullName>NISSAN</fullName>
            </value>
            <value>
                <fullName>PEUGEOT</fullName>
            </value>
            <value>
                <fullName>PORSCHE</fullName>
            </value>
            <value>
                <fullName>RAM</fullName>
            </value>
            <value>
                <fullName>RANGE ROVER</fullName>
            </value>
            <value>
                <fullName>RENAULT</fullName>
            </value>
            <value>
                <fullName>SKODA</fullName>
            </value>
            <value>
                <fullName>SSANGYONG</fullName>
            </value>
            <value>
                <fullName>SUBARU</fullName>
            </value>
            <value>
                <fullName>SUZUKI</fullName>
            </value>
            <value>
                <fullName>TOYOTA</fullName>
            </value>
            <value>
                <fullName>VOLKSWAGEN</fullName>
            </value>
            <value>
                <fullName>VOLVO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>