force-app/main/default/objects/Inventario_de_Usados__c/fields/Margen__c.field-meta.xml
<CustomField>
    <fullName>Margen__c</fullName>
    <formula>Utilidad__c /  Precio_Venta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>