force-app/main/default/objects/Inventario_de_Usados__c/fields/Maximo_descuento_gerente_nacional__c.field-meta.xml
<CustomField>
    <fullName>Maximo_descuento_gerente_nacional__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Máximo descuento gerente nacional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>