force-app/main/default/objects/Inventario_de_Usados__c/fields/Maximo_descuento_jefe_gerente__c.field-meta.xml
<CustomField>
    <fullName>Maximo_descuento_jefe_gerente__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Máximo descuento jefe/gerente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>