force-app/main/default/objects/Inventario_de_Usados__c/fields/Nombre_De_Producto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_De_Producto__c</fullName>
    <label>Nombre De Producto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>