force-app/main/default/objects/Inventario_de_Usados__c/fields/Nombre_Usuario_Cliente_Comprador__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Usuario_Cliente_Comprador__c</fullName>
    <formula>IF (TEXT(Oportunidad__r.StageName)=&quot;P5&quot;,  Oportunidad__r.Account.Name , &quot;No Asignado&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Usuario Cliente Comprador</label>
    <type>Text</type>
</CustomField>