force-app/main/default/objects/Inventario_de_Usados__c/fields/Origen__c.field-meta.xml
<CustomField>
    <fullName>Origen__c</fullName>
    <label>Origen del inventario</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RETOMA</fullName>
            </value>
            <value>
                <fullName>RENTING</fullName>
            </value>
            <value>
                <fullName>CONSIGNACIÓN</fullName>
            </value>
            <value>
                <fullName>ACTIVO FIJO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>