force-app/main/default/objects/Inventario_de_Usados__c/fields/Placas__c.field-meta.xml
<CustomField>
    <fullName>Placas__c</fullName>
    <externalId>true</externalId>
    <label>Placa</label>
    <length>6</length>
    <type>Text</type>
</CustomField>