force-app/main/default/objects/Inventario_de_Usados__c/fields/Precio_De_Factura__c.field-meta.xml
<CustomField>
    <fullName>Precio_De_Factura__c</fullName>
    <label>Precio De Factura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>