force-app/main/default/objects/Inventario_de_Usados__c/fields/Rango_Dias_En_Inventario__c.field-meta.xml
<CustomField>
    <fullName>Rango_Dias_En_Inventario__c</fullName>
    <formula>IF(Dias_de_inventario__c  &lt; 30, &quot;&lt;30 DÍAS&quot;,
    IF(AND(Dias_de_inventario__c  &gt; 30 , Dias_de_inventario__c  &lt; 61), &quot;31 Y 60 DÍAS&quot;,
        IF(AND(Dias_de_inventario__c  &gt; 60, Dias_de_inventario__c  &lt; 91),&quot;61 Y 90 DÍAS&quot;,
            IF(AND(Dias_de_inventario__c  &gt; 90, Dias_de_inventario__c  &lt; 121), &quot;91 Y 120 DÍAS&quot;,
                IF(Dias_de_inventario__c  &gt; 120, &quot;&gt; A 120 DÍAS&quot;, &quot;Rango no Calculado&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rango Días En Inventario</label>
    <type>Text</type>
</CustomField>