force-app/main/default/objects/Inventario_de_Usados__c/fields/Tipo_de_Combustible__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Combustible__c</fullName>
    <label>Tipo de Combustible</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DIESEL</fullName>
            </value>
            <value>
                <fullName>GASOLINA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>