force-app/main/default/objects/Inventario_de_Usados__c/fields/Tipo_Inv_Usado__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Inv_Usado__c</fullName>
    <formula>CASE( Origen__c , 
       &quot;Renting&quot;, &quot;Propio&quot;, 
       &quot;Retoma&quot;, &quot;Propio&quot;,
       &quot;Consignación&quot;, &quot;Consignación&quot;,
       &quot;Activo Fijo&quot;, &quot;Activo Fijo&quot;,
       &quot;Pendiente por ingresar&quot;, &quot;Pendiente por ingresar&quot;,
&quot;No Definido&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo Inv. Usado</label>
    <type>Text</type>
</CustomField>