force-app/main/default/objects/Inventario_de_Usados__c/fields/Traccion__c.field-meta.xml
<CustomField>
    <fullName>Traccion__c</fullName>
    <label>Tracción</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2WD</fullName>
            </value>
            <value>
                <fullName>4WD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>