force-app/main/default/objects/Inventario_de_Usados__c/fields/Utilidad__c.field-meta.xml
<CustomField>
    <fullName>Utilidad__c</fullName>
    <formula>Precio_Venta__c -  Costo_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>