force-app/main/default/objects/Inventario_de_Usados__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Versión Honda</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Linea__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>LX</fullName>
            </value>
            <value>
                <fullName>EX</fullName>
            </value>
            <value>
                <fullName>LX 5DR CVT</fullName>
            </value>
            <value>
                <fullName>EX COUPE</fullName>
            </value>
            <value>
                <fullName>EXL</fullName>
            </value>
            <value>
                <fullName>EXL TURBO</fullName>
            </value>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>EXL T</fullName>
            </value>
            <value>
                <fullName>V6</fullName>
            </value>
            <value>
                <fullName>LX X-TYLE</fullName>
            </value>
            <value>
                <fullName>EXL PRESTIGE</fullName>
            </value>
            <value>
                <fullName>EXL 4WD</fullName>
            </value>
            <value>
                <fullName>RVSI</fullName>
            </value>
            <value>
                <fullName>CITY</fullName>
            </value>
            <value>
                <fullName>CITY PLUS</fullName>
            </value>
            <value>
                <fullName>I LIMITED</fullName>
            </value>
            <value>
                <fullName>PRESTIGE 1,5 TURBO</fullName>
            </value>
            <value>
                <fullName>EXL 1,5 TURBO</fullName>
            </value>
            <value>
                <fullName>PRESTIGE EXL</fullName>
            </value>
            <value>
                <fullName>PRESTIGE LX</fullName>
            </value>
            <value>
                <fullName>EXLN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>