force-app/main/default/objects/Inventario_de_Usados__c/fields/Version_otras_marcas__c.field-meta.xml
<CustomField>
    <fullName>Version_otras_marcas__c</fullName>
    <label>Versión otras marcas</label>
    <length>100</length>
    <type>Text</type>
</CustomField>