force-app/main/default/objects/Inventario_de_Usados__c/fields/Vin__c.field-meta.xml
<CustomField>
    <fullName>Vin__c</fullName>
    <label>Vin</label>
    <length>40</length>
    <type>Text</type>
</CustomField>