force-app/main/default/objects/Inventario_de_Usados__c/validationRules/Valida_Consignacion_SinCostoReacon.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Consignacion_SinCostoReacon</fullName>
    <active>true</active>
    <errorConditionFormula>AND( TEXT(Origen__c)=&quot;CONSIGNACIÓN&quot;,  Costo_Reacondicionamiento__c &lt;&gt;null )</errorConditionFormula>
    <errorMessage>No se debe introducir costo de reacondicionamiento si el origen es consignación.</errorMessage>
</ValidationRule>