force-app/main/default/objects/Inventario_de_Usados__c/validationRules/Valida_Placa.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Placa</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Placas__c )),NOT( REGEX( Placas__c , &quot;\\b[a-zA-Z]{3}\\d{3}\\b&quot;) ))</errorConditionFormula>
    <errorMessage>Formato incorrecto para la placa, debe ser 3 letras seguidas de 3 dígitos.</errorMessage>
</ValidationRule>