force-app/main/default/objects/Inventario_de_Usados__c/validationRules/Valida_Separados_Creacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Separados_Creacion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(), TEXT(Estado_Del_Vehiculo__c)=&quot;SEPARADO&quot;,  Oportunidad__c =null )</errorConditionFormula>
    <errorMessage>No se puede crear un auto usado separado sin la oportunidad que lo separó.</errorMessage>
</ValidationRule>