force-app/main/default/objects/Inventario_de_Usados__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agencia__c</columns>
    <columns>Nombre_De_Producto__c</columns>
    <columns>Estado_Del_Vehiculo__c</columns>
    <columns>Precio_Venta__c</columns>
    <columns>Kilometraje__c</columns>
    <columns>Fotos_TucarroCom__c</columns>
    <columns>Vin__c</columns>
    <columns>Placas__c</columns>
    <columns>Origen__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Placas__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Estado_Del_Vehiculo__c</field>
        <operation>notEqual</operation>
        <value>CONSIG. RETIRADO</value>
    </filters>
    <label>Todos</label>
</ListView>