force-app/main/default/objects/Inventario_de_Usados__c/listViews/Inventario_Disponible.listView-meta.xml
<ListView>
    <fullName>Inventario_Disponible</fullName>
    <columns>NAME</columns>
    <columns>Nombre_De_Producto__c</columns>
    <columns>Placas__c</columns>
    <columns>Tipo_Inv_Usado__c</columns>
    <columns>Origen__c</columns>
    <columns>Agencia__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Oportunidad__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Estado_Del_Vehiculo__c</field>
        <operation>equals</operation>
        <value>DISPONIBLE,PENDIENTE POR INGRESAR</value>
    </filters>
    <label>Inventario Disponible</label>
</ListView>